k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abc-docs
spec:
  selector:
    app: abc-docs
  ports:
    - name: http
      port: 80
      targetPort: http
