k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abc-docs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - abc.talaatharb.net
      secretName: abc-talaatharb-net-tls
  rules:
    - host: abc.talaatharb.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abc-docs
                port:
                  name: http
